--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "choices.js": "^9.0.1",
+    "jquery": "^3.4.1",
+    "jquery-bridget": "^2.0.1",
+    "selectize": "^0.12.6",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
